<resources>
    <string name="app_name">WeatherApp</string>
    <string name="settings">Settings</string>
    <string name="description_language">Description Language</string>
    <string name="temperature">Temperature Unit</string>
    <string name="save">Save</string>
    <string name="f">°F</string>
    <string name="c">°C</string>
    <string name="english">EN</string>
    <string name="portuguese">PT</string>
    <string name="save_settings">Save settings</string>
    <string name="no_network">No Conection</string>
    <string name="search">Search</string>
    <string name="digite">Enter city name</string>
    <string name="clouds">Clouds ${city.clouds.all.toInt().toString()}%</string>
    <string name="no_result">No results</string>
    <string name="error">Process error</string>
    <string name="metric">metric</string>
    <string name="imperial">imperial</string>
</resources>
